crates/rome_console/tests/markup/open_element_improper_close_1.stderr
error: unexpected token
 --> tests/markup/open_element_improper_close_1.rs:3:20
  |
3 |         <Emphasis /<
  |                    ^
